Test and implementation progress pt 3 RC
Signed-off-by: Daniel Foglio <dfoglio@cisco.com>

--- a/deployment.yml
+++ b/deployment.yml
@@ -40,5 +40,5 @@ spec:
       volumes:
         - name: kube-config-volume
           hostPath:
-            # directory location on host
-            path: /home/ubuntu/.kube/
+            # directory where kubeconfig is located on host
+            path: /var/lib/cratekube/
