--- a/app.yml
+++ b/app.yml
@@ -27,15 +27,18 @@ auth:
 kubeconfigLocation: ${KUBE_CONFIG_LOCATION:-/app/kube/internal-config}
 
 jobs:
-  upgradeAvailabilityJob: ${JOB_EXECUTION_FREQUENCY:-10min}
+  upgradeAvailabilityJob: ${UPGRADE_JOB_EXECUTION_FREQUENCY:-5min}
+  componentDeploymentJob: ${DEPLOYMENT_JOB_EXECUTION_FREQUENCY:-5min}
 
 github:
   orgHome: ${GITHUB_ORG_HOME:-https://github.com/cratekube}
   orgBaseRawHome: ${GITHUB_ORG_RAW_HOME:-https://raw.githubusercontent.com/cratekube}
 
+# Used for global cache key, github queries and kubectl retrieval purposes.
+# these keys coincide with both the repository names and the selector label names in each repositories deployment.yml.
+# Boolean values represent whether we should deploy the latest version from github if the service is not in k8s.
 managedComponents:
-  cluster-mgmt-service: true
-  cloud-mgmt-service: true
-  lifecycle-service: true
-  # whatever this key is should coincide with k8s deployment resource selector name for retrieval purposes
-  # lifecycle-service  needs to account for deploying itself
+  cluster-mgmt-service: ${$CLUSTER_MGMT_ENABLED:-true}
+  cloud-mgmt-service: ${$CLOUD_MGMT_ENABLED:-true}
+  lifecycle-service: ${$LIFECYCLE_ENABLED:-true}
+
