deployment latest tag
Signed-off-by: Daniel Foglio <dfoglio@cisco.com>

--- a/deployment.yml
+++ b/deployment.yml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
        - name: lifecycle-service
-         image: cratekube/lifecycle-service:1.0.0
+         image: cratekube/lifecycle-service:latest
          ports:
          - containerPort: 9000
          volumeMounts:
